--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -9,6 +9,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    width: 1440px;
+}
+.signUp-container {
+    padding: 20px;
+}
 .singUp-header {
     border-bottom: 1px solid #000000;
     padding: 45px 135px;
@@ -73,6 +79,7 @@
     color: #FAFAFA;
     margin-top: 20px;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 .signUp-text {
     display: flex;
