--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -26,9 +26,10 @@
 .login-header h1 {
   background: linear-gradient(to right, #d3b5b5, #87e2ee);
   border-radius: 4px;
-  margin: 0 auto;
+  margin:  auto;
   text-align: center;
   text-shadow: 2px 2px 4px #ec9f9f;
+  padding: 8px 12px;
 }
 
 .login-header a {
