--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,6 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,700&display=swap');
+
 body {
     background-color: black;
     color: white;
+    width: 1440px;
+}
+.footer-container {
+    width: 1440px;
+    padding: 80px 135px;
+}
+.e-mail {
+    border: 1px solid #FAFAFA;
+    border-radius: 1.5px;
+    padding: 12px 6px;
+    width: 217px;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
 }
 .footer-list {
     display: flex;
@@ -8,9 +27,31 @@ body {
 }
 .footer-app {
     display: flex;
-    gap: 8px;
+    gap: 24px;
 }
-.footer-icon {
-    display: flex;
-    flex-direction: column;
+.footer-text {
+    list-style: none;
 }
+.footer-text span {
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    text-align: left;
+
+}
+.footer-text li {
+    margin-bottom: 24px;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+
+}
+.footer-text a {
+    text-decoration: none;
+    color: white;
+}
+
