--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -21,12 +21,13 @@
   padding: 38px 135px 16px;
   margin-bottom: 60px;
   border-bottom: 1px solid #000;
+  position: relative;
 }
 
 .login-header h1 {
   background: linear-gradient(to right, #d3b5b5, #87e2ee);
   border-radius: 4px;
-  margin:  auto;
+  margin: auto;
   text-align: center;
   text-shadow: 2px 2px 4px #ec9f9f;
   padding: 8px 12px;
@@ -39,6 +40,8 @@
   line-height: 24px;
   color: #000;
   text-decoration: none;
+  position: absolute;
+  right: 24px;
 }
 
 .login-content {
@@ -49,8 +52,8 @@
 }
 
 .login-content img {
-  width: 805px;
-  height: 781px;
+  width: 720px;
+  height: 658px;
 }
 
 .login-form {
