--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -5,101 +5,120 @@
 
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 body {
-    width: 1440px;
+  width: 1440px;
+  margin: auto;
 }
+
 .signUp-container {
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 140px;
 }
+
 .singUp-header {
-    border-bottom: 1px solid #000000;
-    padding: 38px 135px 16px;
-    margin-bottom: 60px;
-    display: flex;
+  border-bottom: 1px solid #000000;
+  padding: 38px 135px 16px;
+  margin-bottom: 60px;
+  display: flex;
 }
+
 .singUp-header h1 {
-    background: linear-gradient(to right, #d3b5b5, #87e2ee);
-    text-shadow: 2px 2px 4px #ec9f9f;
-    padding: 8px 12px;
-    border-radius: 4px;
-    margin:auto;
+  background: linear-gradient(to right, #d3b5b5, #87e2ee);
+  text-shadow: 2px 2px 4px #ec9f9f;
+  padding: 8px 12px;
+  border-radius: 4px;
+  margin: auto;
 }
+
 .signUp-create-account {
-    width: 1305px;
-    display: flex;
-    gap: 129px;
+  width: 1305px;
+  display: flex;
+  gap: 129px;
 }
+
 .signUp-create-account img {
-    max-width: 600px;
-    height: 650px;
+  width: 720px;
+  height: 658px;
 }
+
 .signUp-form h2 {
-    font-family: Inter;
-    font-size: 36px;
-    font-weight: 500;
-    line-height: 30px;
-    letter-spacing: 0.04em;
-    text-align: left;
-    color: #000000;
-    margin-bottom: 24px;
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #000000;
+  margin-bottom: 24px;
 }
+
 .signUp-form p {
-    font-family: Poppins;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
-    color: #000000;
-    margin-bottom: 24px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #000000;
+  margin-bottom: 24px;
 }
+
 .signUp-form form input {
-    display: block;
-    width: 370px; 
-    margin-bottom: 15px; 
-    padding: 10px; 
-    font-size: 16px; 
-    border-style: none;
-    border-bottom: 1px solid #000000;
-    margin-bottom: 40px;
-    outline: none;
+  display: block;
+  width: 370px;
+  margin-bottom: 15px;
+  padding: 10px;
+  font-size: 16px;
+  border-style: none;
+  border-bottom: 1px solid #000000;
+  margin-bottom: 40px;
+  outline: none;
 }
+
 .signUp-form button {
-    width: 370px;
-    padding: 16px 122px;
-    border-style: none;
-    border-radius: 4px;
-    background-color: #DB4444;
-    font-family: Poppins;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
-    color: #FAFAFA;
-    margin-top: 20px;
-    cursor: pointer;
-    margin-bottom: 20px;
+  width: 370px;
+  padding: 16px 122px;
+  border-style: none;
+  border-radius: 4px;
+  background-color: #DB4444;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #FAFAFA;
+  margin-top: 20px;
+  cursor: pointer;
+  margin-bottom: 20px;
 }
+
 .signUp-text {
-    display: flex;
-    gap: 16px;
+  display: flex;
+  gap: 16px;
 }
+
 .signUp-text h4 {
-    font-family: Poppins;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
-    color:#000000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #000000;
 }
+
 .signUp-text a {
-    font-family: Poppins;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: #000000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  color: #000000;
+  text-decoration: none;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #000;
 }
