--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -71,13 +71,37 @@ body {
 .signUp-form form input {
   display: block;
   width: 370px;
-  margin-bottom: 15px;
   padding: 10px;
   font-size: 16px;
   border-style: none;
   border-bottom: 1px solid #000000;
   margin-bottom: 40px;
   outline: none;
+}
+
+.formLabel {
+  padding: 0 10px 10px 10px;
+  border-style: none;
+  border-bottom: 1px solid #000000;
+  margin-bottom: 40px;
+  outline: none;
+}
+
+.formLabel label {
+  font-family: Poppins;
+  font-size: 16px;
+  color: #757575;
+  margin-right: 15px;
+}
+
+.formLabel select{
+  border-style: none;
+  outline: none;
+  font-size: 18px;
+}
+
+.formLabel option{
+  font-size: 18px;
 }
 
 .signUp-form button {
