--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -93,7 +93,7 @@
   border-bottom: 1px solid #000;
 }
 
-.login-button a {
+.login-button  {
   font-family: Poppins;
   width: 143px;
   padding: 16px 48px;
