--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -94,7 +94,7 @@
   display: block;
   outline: none;
   margin-bottom: 40px;
-  padding-bottom: 8px;
+  /* padding-bottom: 8px; */
   border-bottom: 1px solid #000;
 }
 
@@ -123,6 +123,9 @@
   text-decoration: none;
 }
 .error {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
   color: red;
   font-size: 14px;
   margin-top: 5px;
