--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -121,7 +123,6 @@
   cursor: pointer;
 }
 
-/* Butonları daha büyük yap ve mobilde kolay tıklanabilir hale getir */
 .w3-left, .w3-right {
   position: absolute;
   top: 50%;
@@ -141,4 +142,66 @@
   height: 13px;
   width: 13px;
   padding: 0;
+}
+.w3-content {
+  border-bottom: 1px solid #000000;
+  width: 100%;
+}
+.menu {
+  padding: 35px 30px;
+  width: 100%;
+}
+.menu-header {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 60px;
+}
+.menu-header h3 {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+  color: #DB4444;
+}
+.menu-icons {
+  width: 100%;
+  display: flex;
+  gap: 15px;
+}
+.menu-icons img  {
+  width: 100%;
+  max-width: 50px;
+  margin-bottom: 16px;
+}
+.border {
+  border: 1px solid #000;
+  padding: 8px;
+  box-sizing: border-box;
+  display: inline-block;
+  text-decoration: none;
+  border-radius: 4px;
+}
+.border span {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-decoration: none;
+  color: #000000;
+  text-align: center;
+  display: block;
+}
+.border span:hover {
+  color: #FAFAFA;
+}
+.border:hover {
+  cursor: pointer;
+  background-color: #DB4444;
+  color: #FAFAFA;
+}
+.border:hover img {
+  filter: brightness(0) invert(1); /* Siyah-beyaz ters çevirme */
 }
