--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -155,7 +155,7 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 .menu-header h3 {
   font-family: Poppins;
@@ -165,10 +165,22 @@
   text-align: left;
   color: #DB4444;
 }
+.menu-header-text h4 {
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 48px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #000000;
+  margin-bottom: 60px;
+}
 .menu-icons {
   width: 100%;
   display: flex;
   gap: 15px;
+  border-bottom: 1px solid #000000;
+  padding-bottom: 35px;
 }
 .menu-icons img  {
   width: 100%;
